--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guia Sites</title>
+    <link rel="shortcut icon" href="src/img/Meu memoji.png" type="image/x-icon">
+    <title>Links - Isaac Lopes</title>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/style.css">
-    <link rel="stylesheet" href="src/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/reset.css">
 
 </head>
 <body>
@@ -16,7 +17,7 @@
          <ul>
             <li>
                 <div class="image">
-                <img src="#" alt="">
+                <img class="logo" src="src/img/Memoji2.png" alt="">
                 </div>
                 <h1>Isaac Lopes</h1>
                 <h3 class="digitando">Desenvolvedor Frontend</h3>
@@ -26,13 +27,32 @@
 
 <main>
 
-    <div>
+    <div class="menu">
 
+        <div class="menu-p">
+        <img class="icon" src="src/img/Meu memoji.png" alt="">
     <a href="https://7zac.github.io/projeto-portfolio/#projetos">Portifólio</a>
+        </div>
+
+        <div class="menu-l">
+        <img class="linkedn" src="src/img/linkedin.png" alt="">    
     <a href="http://linkedin.com/in/isaac-lopesalencar/">Linkedin</a>
+        </div>
+
+        <div class="menu-b">
+        <img class="behance" src="src/img/behance.png" alt="">
     <a href="https://www.behance.net/zacdesigner/">Behance</a>
+        </div>
+
+        <div class="menu-g">
+        <img class="git" src="src/img/github.png" alt="">
     <a href="https://github.com/7Zac">Github</a>
+        </div>
+
+        <div class="menu-w">
+        <img class="wpp" src="src/img/whatsapp.png" alt="">
     <a href="https://api.whatsapp.com/send/?phone=5588988230242&text&type=phone_number&app_absent=0">WhatsApp</a>
+        </div>
 
     </div>
 
